--- a/AnalysisData.ipynb
+++ b/AnalysisData.ipynb
@@ -662,26 +662,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Order Count\n",
-      "31     1778\n",
-      "32     1686\n",
-      "33     1614\n",
-      "34     1586\n",
-      "35     1482\n",
-      "       ... \n",
-      "131      66\n",
-      "121      66\n",
-      "126      64\n",
-      "137      64\n",
-      "133      64\n",
-      "Name: count, Length: 100, dtype: int64\n"
+      "         Item A  Item B  Order Count\n",
+      "1021356    2663    2351          409\n",
+      "1110338    2351    2663          409\n",
+      "953022     2351    2107          390\n",
+      "1021363    2107    2351          390\n",
+      "953027     2170    2107          368\n",
+      "...         ...     ...          ...\n",
+      "648565     3470    1324           31\n",
+      "1244097    3243    3259           31\n",
+      "1323888    5050    3495           31\n",
+      "3533173   21903   21909           31\n",
+      "1997137    3619    6211           31\n",
+      "\n",
+      "[42564 rows x 3 columns]\n"
      ]
     }
    ],
@@ -700,9 +701,9 @@
     "    'Order Count': coo.data\n",
     "})\n",
     "\n",
-    "result = result[result['Order Count'] > 30].sort_values(by='Order Count', ascending=False).value_counts('Order Count')\n",
+    "result = result[result['Order Count'] > 30].sort_values(by='Order Count', ascending=False)\n",
     "\n",
-    "print(result.head(100))\n"
+    "print(result)\n"
    ]
   },
   {
