--- a/AnalysisData.ipynb
+++ b/AnalysisData.ipynb
@@ -708,33 +708,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total inconsistent items: 95\n",
-      "Requester user code\n",
-      "0       638\n",
-      "2       678\n",
-      "3       349\n",
-      "4      4328\n",
-      "5       183\n",
-      "       ... \n",
-      "98      512\n",
-      "99     1332\n",
-      "100      30\n",
-      "101     285\n",
-      "102      34\n",
-      "Name: Outbound order number, Length: 95, dtype: int64\n"
+      "Total inconsistent items: 13\n",
+      "Creation Dt\n",
+      "2025-01-04 11:15:52.866999760    2\n",
+      "2025-01-07 06:18:53.960000515    2\n",
+      "2025-01-07 14:41:39.787000100    2\n",
+      "2025-01-08 15:40:09.972999894    2\n",
+      "2025-01-13 17:12:20.412999737    2\n",
+      "2025-01-14 07:50:19.100000267    2\n",
+      "2025-01-15 07:35:17.550000084    2\n",
+      "2025-01-16 06:41:49.473000208    2\n",
+      "2025-01-16 08:52:52.303000048    2\n",
+      "2025-01-16 13:04:29.142999690    2\n",
+      "2025-01-16 15:02:59.869999783    2\n",
+      "2025-01-18 13:42:03.020000169    2\n",
+      "2025-01-18 14:37:34.922999976    2\n",
+      "Name: Last Change Dt, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "# Group by Item code and count the number of unique Stock Product IDs\n",
-    "mapping_check = df.groupby('Requester user code')['Outbound order number'].nunique()\n",
+    "mapping_check = df.groupby('Creation Dt')['Last Change Dt'].nunique()\n",
     "\n",
     "# Find Item codes that map to more than one Stock Product ID\n",
     "inconsistent_items = mapping_check[mapping_check > 1]\n",
@@ -742,6 +744,73 @@
     "# Show results\n",
     "print(f\"Total inconsistent items: {len(inconsistent_items)}\")\n",
     "print(inconsistent_items)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Time Difference\n",
+      "140034 0 days 00:00:00.327001095\n",
+      "43122  0 days 00:00:00.322999151\n",
+      "58811  0 days 00:00:00.279999988\n",
+      "42788  0 days 00:00:00.266999656\n",
+      "139984 0 days 00:00:00.260000350\n",
+      "15006  0 days 00:00:00.249999273\n",
+      "90183  0 days 00:00:00.240000080\n",
+      "35322  0 days 00:00:00.240000079\n",
+      "3842   0 days 00:00:00.234000317\n",
+      "48002  0 days 00:00:00.230000264\n",
+      "43598  0 days 00:00:00.220000441\n",
+      "91011  0 days 00:00:00.219999189\n",
+      "35652  0 days 00:00:00.216000389\n",
+      "126314 0 days 00:00:00.209999995\n",
+      "84802  0 days 00:00:00.203000058\n",
+      "89959  0 days 00:00:00.196999663\n",
+      "46472  0 days 00:00:00.196999663\n",
+      "91151  0 days 00:00:00.193000233\n",
+      "84826  0 days 00:00:00.189999725\n",
+      "85654  0 days 00:00:00.189999095\n",
+      "81249  0 days 00:00:00.173999508\n",
+      "49985  0 days 00:00:00.169999456\n",
+      "90219  0 days 00:00:00.164000315\n",
+      "125822 0 days 00:00:00.163999063\n",
+      "91017  0 days 00:00:00.163000772\n",
+      "88784  0 days 00:00:00.163000149\n",
+      "43752  0 days 00:00:00.160000263\n",
+      "89018  0 days 00:00:00.159999641\n",
+      "84463  0 days 00:00:00.157000377\n",
+      "42591  0 days 00:00:00.153000325\n",
+      "139316 0 days 00:00:00.142999871\n",
+      "85602  0 days 00:00:00.137000109\n",
+      "49987  0 days 00:00:00.135999942\n",
+      "32541  0 days 00:00:00.135999311\n",
+      "85636  0 days 00:00:00.133001318\n",
+      "42609  0 days 00:00:00.133000056\n",
+      "90185  0 days 00:00:00.130000179\n",
+      "84798  0 days 00:00:00.130000171\n",
+      "103460 0 days 00:00:00.127000293\n",
+      "111703 0 days 00:00:00.126999663\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the time difference\n",
+    "df['Time Difference'] = df['Last Change Dt'] - df['Creation Dt']\n",
+    "\n",
+    "# Filter rows where the difference isn't zero\n",
+    "df_diff = df[df['Time Difference'] != pd.Timedelta(0)]\n",
+    "\n",
+    "# Optional: sort by largest differences\n",
+    "df_diff = df_diff.sort_values(by='Time Difference', ascending=False)\n",
+    "\n",
+    "# Display result\n",
+    "print(df_diff[['Time Difference']].head(40))"
    ]
   }
  ],
