--- a/AnalysisData.ipynb
+++ b/AnalysisData.ipynb
@@ -1942,12 +1942,14 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T08:31:15.546565Z",
-     "start_time": "2025-05-10T08:31:15.183504Z"
+     "end_time": "2025-05-10T11:05:11.647892Z",
+     "start_time": "2025-05-10T11:05:11.161319Z"
     }
    },
    "source": [
     "from scipy.optimize import curve_fit\n",
+    "from scipy.stats import chisquare\n",
+    "\n",
     "# plot of amount of items in each order\n",
     "import scipy.stats as stats\n",
     "import numpy as np\n",
@@ -1987,14 +1989,23 @@
     "plt.show()\n",
     "\n",
     "print(f\"min x: {min(bin_centers)}, max x: {max(bin_centers)}\")\n",
-    "print(params)\n"
+    "print(params)\n",
+    "unnorm_expected = func(bin_centers, *params)\n",
+    "expected = unnorm_expected / sum(unnorm_expected)\n",
+    "observed = bin_heights / sum(bin_heights)\n",
+    "print(sum(expected))\n",
+    "print(sum(observed))\n",
+    "\n",
+    "chi2_stat, p_value = chisquare(f_obs=observed, f_exp=expected)\n",
+    "print(f\"p-value: {p_value}\")\n",
+    "print(f\"chi2_stat: {chi2_stat}\")\n"
    ],
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4818/3801850185.py:28: RuntimeWarning: overflow encountered in exp\n",
+      "/tmp/ipykernel_4818/485902735.py:30: RuntimeWarning: overflow encountered in exp\n",
       "  return a*np.exp(-c*x)+d\n"
      ]
     },
@@ -2013,11 +2024,15 @@
      "output_type": "stream",
      "text": [
       "min x: 1.5, max x: 47.5\n",
-      "[1.16754861e+04 4.92942725e-01 5.77416566e+01]\n"
+      "[1.16754861e+04 4.92942725e-01 5.77416566e+01]\n",
+      "1.0\n",
+      "1.0\n",
+      "p-value: 1.0\n",
+      "chi2_stat: 0.08640910933575235\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 39
   },
   {
    "metadata": {
