--- a/newgraphs_change_in_runtest.ipynb
+++ b/newgraphs_change_in_runtest.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-05T07:07:21.469784Z",
-     "start_time": "2025-06-05T07:07:21.466347Z"
+     "end_time": "2025-06-05T12:07:12.629889Z",
+     "start_time": "2025-06-05T12:07:12.626651Z"
     }
    },
    "source": [
@@ -23,8 +23,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T07:07:28.742334Z",
-     "start_time": "2025-06-05T07:07:22.848554Z"
+     "end_time": "2025-06-05T12:07:18.767198Z",
+     "start_time": "2025-06-05T12:07:12.675196Z"
     }
    },
    "cell_type": "code",
@@ -41,8 +41,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T07:07:54.803034Z",
-     "start_time": "2025-06-05T07:07:54.798665Z"
+     "end_time": "2025-06-05T12:07:19.298845Z",
+     "start_time": "2025-06-05T12:07:19.293844Z"
     }
    },
    "cell_type": "code",
@@ -73,8 +73,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T07:08:01.737653Z",
-     "start_time": "2025-06-05T07:08:00.392493Z"
+     "end_time": "2025-06-05T12:07:20.446268Z",
+     "start_time": "2025-06-05T12:07:19.347728Z"
     }
    },
    "cell_type": "code",
@@ -96,8 +96,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T07:08:17.075249Z",
-     "start_time": "2025-06-05T07:08:15.922297Z"
+     "end_time": "2025-06-05T12:07:21.702180Z",
+     "start_time": "2025-06-05T12:07:20.456858Z"
     }
    },
    "cell_type": "code",
@@ -237,8 +237,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T07:17:14.482234Z",
-     "start_time": "2025-06-05T07:17:14.321489Z"
+     "end_time": "2025-06-05T12:07:21.862648Z",
+     "start_time": "2025-06-05T12:07:21.720489Z"
     }
    },
    "cell_type": "code",
@@ -375,12 +375,12 @@
        "</div>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -393,8 +393,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T07:22:47.607517Z",
-     "start_time": "2025-06-05T07:22:47.211052Z"
+     "end_time": "2025-06-05T12:07:22.447412Z",
+     "start_time": "2025-06-05T12:07:22.033846Z"
     }
    },
    "cell_type": "code",
@@ -405,7 +405,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\robbe\\AppData\\Local\\Temp\\ipykernel_26764\\2346103808.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\robbe\\AppData\\Local\\Temp\\ipykernel_18996\\2346103808.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  df[df['kind'] == 'twoLift'][['delta', 'binned_time']].groupby(\"binned_time\").count()\n"
      ]
     },
@@ -547,18 +547,18 @@
        "</div>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T07:21:16.319642Z",
-     "start_time": "2025-06-05T07:20:24.835598Z"
+     "end_time": "2025-06-05T12:08:53.025226Z",
+     "start_time": "2025-06-05T12:08:04.127897Z"
     }
    },
    "cell_type": "code",
@@ -571,7 +571,7 @@
     "    data=tempDf,\n",
     "    by=\"binned_time\",\n",
     "    column=\"delta\",\n",
-    "    x_range=[0, 80]\n",
+    "    x_range=[0, 80],\n",
     ")\n",
     "plt.title(f\"Distribution of delta times per bin of real time (One lift), (2000 Orders)\")\n",
     "plt.xlabel(\"Delta Time (seconds)\")\n",
@@ -593,7 +593,7 @@
        "Text(0, 0.5, 'Real time percentage bins')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -608,7 +608,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 21
+   "execution_count": 10
   },
   {
    "metadata": {
